-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.1, 5.14.2
-
Tested on Android running on ChromeBook Arm and x86.
Probably all Android.
-
-
2a5afb88dbf675c39e0671b11870596fdb3b6725 (qt/qtbase/dev) 087d7891aa54084236a27b5b77767e9d5106e108 (qt/qtbase/5.15)
ToolTip crashes app on Android Qt 5.14.1 & 5.14.2.
Does not crash in Qt 5.12.3
Any tooptip causes crash. QToolTip or setToolTip() on widget.
Add a tooltip to any widget and hover over with mouse.
Stack:
1 QTipLabel :: placeTip()
2 QToolTip :: showText()
Attached very simple example.
- resulted from
-
QTBUG-79627 Large size cursor overlaps tooltips on Windows
-
- Closed
-
| For Gerrit Dashboard: QTBUG-83916 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 318287,3 | Do not crash if QPA plugin does not support cursors | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 318349,2 | Do not crash if QPA plugin does not support cursors | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |