Do not crash if QPA plugin does not support cursors

This was the case on Android, and caused a crash

Fixes: QTBUG-83916
Change-Id: Iabc17237498091d815241730a2b14ece5a45d0b9
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 2a5afb88dbf675c39e0671b11870596fdb3b6725)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>